// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ConnectedHeader renders the ConnectedHeader component 1`] = `
Object {
  "children": Array [
    <div
      className="logo"
    >
      <Image
        src="opensrp-logo-color.png"
        width={200}
      />
    </div>,
    <Menu
      mode="horizontal"
      selectedKeys={
        Array [
          "/",
        ]
      }
    >
      <MenuItem>
        <Link
          to="/"
        >
          Home
        </Link>
      </MenuItem>
      <MenuItem
        style={
          Object {
            "float": "right",
          }
        }
      >
        <Link
          to="/login"
        >
          Login
        </Link>
      </MenuItem>
    </Menu>,
  ],
}
`;

exports[`components/ConnectedHeader renders the ConnectedHeader when logged in 1`] = `
Object {
  "children": Array [
    <div
      className="logo"
    >
      <Image
        src="opensrp-logo-color.png"
        width={200}
      />
    </div>,
    <Menu
      mode="horizontal"
      selectedKeys={
        Array [
          "/",
        ]
      }
    >
      <MenuItem>
        <Link
          to="/"
        >
          Home
        </Link>
      </MenuItem>
      <MenuItem>
        <Link
          to="/admin"
        >
          Admin
        </Link>
      </MenuItem>
      <SubMenu
        style={
          Object {
            "float": "right",
          }
        }
        title={
          <div>
            <span>
              RobertBaratheon
            </span>
            <span>
               
            </span>
            <Avatar
              icon={<ForwardRef(UserOutlined) />}
              shape="square"
              size="default"
            />
          </div>
        }
      >
        <MenuItem>
          <Link
            to="/logout"
          >
            Logout
          </Link>
        </MenuItem>
        <MenuItem>
          <Link
            to="/user/edit/cab07278-c77b-4bc7-b154-bcbf01b7d35b"
          >
            Manage account
          </Link>
        </MenuItem>
        <MenuItem>
          <Link
            to="/user/edit/cab07278-c77b-4bc7-b154-bcbf01b7d35b"
          >
            Manage account
          </Link>
        </MenuItem>
      </SubMenu>
    </Menu>,
  ],
}
`;
